--- a/my-portfolio-frontend/src/app/pages/projects/projects.component.html
+++ b/my-portfolio-frontend/src/app/pages/projects/projects.component.html
@@ -1,1 +1,28 @@
-<p>projects works!</p>
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
+            My projects section<br>My projects section
