add mattoolbar into header and fix it

--- a/my-portfolio-frontend/src/app/app.component.html
+++ b/my-portfolio-frontend/src/app/app.component.html
@@ -1,12 +1,18 @@
-<mat-toolbar>
-    <button mat-icon-button id="menu-icon" (click)="sidenav.toggle()" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <a href="#home" mat-button class="top-menu-item">Home</a>
-    <a href="#aboutme" mat-button class="top-menu-item">About me</a>
-    <a href="#projects" mat-button class="top-menu-item">Projects</a>
-    <a href="#reviews" mat-button class="top-menu-item">Reviews</a>
-</mat-toolbar>
+<header>
+    <div class="container-xl">
+        <mat-toolbar>
+            <button mat-icon-button id="menu-icon" (click)="sidenav.toggle()" aria-label="Example icon-button with menu icon">
+              <mat-icon>menu</mat-icon>
+            </button>
+            <a href="#home" mat-button class="top-menu-item">Home</a>
+            <a href="#aboutme" mat-button class="top-menu-item">About me</a>
+            <a href="#projects" mat-button class="top-menu-item">Projects</a>
+            <a href="#reviews" mat-button class="top-menu-item">Reviews</a>
+        </mat-toolbar>
+    </div>
+</header>
+
+
 
 <mat-sidenav-container>
     <mat-sidenav #sidenav [fixedInViewport]="true" [fixedTopGap]="60" mode="over">
