--- a/my-portfolio-frontend/src/app/pages/about-me/about-me.component.html
+++ b/my-portfolio-frontend/src/app/pages/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: rgb(156, 156, 230);">
+<div>
     <br>About me section
     About me section<br>About me section
     About me section<br>About me section
