--- a/my-portfolio-frontend/src/app/pages/home/home.component.html
+++ b/my-portfolio-frontend/src/app/pages/home/home.component.html
@@ -1,10 +1,31 @@
-<p>home works1</p><br>
-<p>home works2</p><br>
-<p>home works3</p><br>
-<p>home works4</p><br>
-<p>home works5</p><br>
-<p>home works6</p><br>
-<p>home works7</p><br>
-<p>home works8</p><br>
-<p>home works9</p><br>
-<p>home works10</p><br>
+<div class="slider">
+    <div class="container-xl">
+        <p>home works1</p><br>
+        <p>home works2</p><br>
+        <p>home works3</p><br>
+        <p>home works4</p><br>
+        <p>home works5</p><br>
+        <p>home works6</p><br>
+        <p>home works7</p><br>
+        <p>home works8</p><br>
+        <p>home works9</p><br>
+        <p>home works10</p><br>
+    </div>
+</div>
+
+<div class="wave">
+    <div class="ondebox">
+        <svg class="onde" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="onda" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352Z" />
+            </defs>
+            <g class="parallaxonde">
+                <use xlink:href="#onda" x="48" y="0" fill="rgba(42,44,57,0.6)" />
+                <use xlink:href="#onda" x="48" y="3" fill="rgba(42,44,57,0.4)" />
+                <use xlink:href="#onda" x="48" y="5" fill="rgba(42,44,57,0.1)" />
+                <use xlink:href="#onda" x="48" y="7" fill="#2a2c39" />
+            </g>
+        </svg>
+    </div>
+</div>
