Add home pdp with no background and presentation

--- a/my-portfolio-frontend/src/app/pages/home/home.component.html
+++ b/my-portfolio-frontend/src/app/pages/home/home.component.html
@@ -1,15 +1,33 @@
-<div class="slider">
+<div class="home-main">
     <div class="container-xl">
-        <p>home works1</p><br>
-        <p>home works2</p><br>
-        <p>home works3</p><br>
-        <p>home works4</p><br>
-        <p>home works5</p><br>
-        <p>home works6</p><br>
-        <p>home works7</p><br>
-        <p>home works8</p><br>
-        <p>home works9</p><br>
-        <p>home works10</p><br>
+        <div class="row">
+
+            <div id="wrap" class="img-wrap col-xs-12 col-lg-4">
+                <img src="/assets/pdp-no-background.png" alt="My Photo">
+            </div>
+
+
+            <div class="home-text col-xs-12 col-lg-8">
+
+                <h3>Hello, <span>I'm</span></h3>
+                <h1>BERKATI Imad</h1>
+                <h3>Tech Lead and Senior Java Developer</h3>
+                <p>
+                    With advanced expertise in designing, developing, and maintaining high-performance enterprise
+                    applications, I am passionate about delivering robust and scalable solutions through efficient
+                    troubleshooting and debugging. My hands-on experience spans a wide range of cutting-edge
+                    technologies, including Java, Spring Boot, Spring Batch, Spring Cloud, Angular, AWS (Certified
+                    Developer Associate), and Microservices, applied extensively in both professional and personal
+                    projects.<br><br>
+
+                    I am proficient in leveraging modern DevOps practices for CI/CD pipelines, employing tools like
+                    Jenkins, GitLab, SonarQube, and Docker, as well as managing deployments on Kubernetes. My
+                    development expertise is grounded in adopting hexagonal architecture principles to ensure
+                    maintainability and scalability across projects.
+                </p>
+
+            </div>
+        </div>
     </div>
 </div>
 
