add social media

--- a/my-portfolio-frontend/src/app/pages/home/home.component.html
+++ b/my-portfolio-frontend/src/app/pages/home/home.component.html
@@ -25,8 +25,18 @@
                     development expertise is grounded in adopting hexagonal architecture principles to ensure
                     maintainability and scalability across projects.
                 </p>
-
             </div>
+        </div>
+        <div class="row social-media">
+            <ul>
+                <li>
+                  <a href="#"><i class="fab fa-github icon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin-in icon"></i></a></li>
+                <li>
+                  <a href="#"><i class="fab fa-youtube icon"></i></a></li>
+              </ul>
         </div>
     </div>
 </div>
