--- a/my-portfolio-frontend/src/app/pages/projects/projects.component.html
+++ b/my-portfolio-frontend/src/app/pages/projects/projects.component.html
@@ -1,28 +1,91 @@
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
+<div class="projects-main">
+    <div class="container-xl">
+        <div class="grid">
+            <div class="row gx-5">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="card">
+                        <img class="card__img"
+                            src="https://www.fournisseurs-electricite.com/sites/fournisseurs-electricite.com/files/2019-12/enedis-presentation.png"
+                            alt="Snowy Mountains">
+                        <div class="card__content">
+                            <h2 class="card__header">TechLead & Senior Developer</h2>
+                            <div class="card__text-wrapper">
+                                <p class="card__text">Look up at the night sky, and find yourself
+                                    <strong>immersed</strong>
+                                    in the amazing mountain range of Aspen. </p>
+                            </div>
+                            <button class="card__btn">Explore <span>&rarr;</span></button>
+                        </div>
+                    </div>
+                </div>
 
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
-            My projects section<br>My projects section
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="card"><img class="card__img"
+                            src="https://independant.io/wp-content/uploads/logo-smile-pay.png"
+                            alt="Desert">
+                        <div class="card__content">
+                            <h1 class="card__header">Senior Fullstack Developer</h1>
+                            <div class="card__text-wrapper">
+                                <p class="card__text">Capture the stunning <strong>essence</strong> of the early morning
+                                    sunrise in the Californian wilderness, and surround yourself in a world you never
+                                    even
+                                    knew existed.</p>
+                            </div>
+                            <button class="card__btn">Explore <span>&rarr;</span></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="card"><img class="card__img"
+                            src="https://instant-system.com/images/start/homepage-illust.jpg"
+                            alt="Canyons">
+                        <div class="card__content">
+                            <h1 class="card__header">Java / API Software Developer</h1>
+                            <div class="card__text-wrapper">
+                                <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, is
+                                    truly
+                                    something much more than incredible.</p>
+                            </div>
+                            <button class="card__btn">Explore <span>&rarr;</span></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="card"><img class="card__img"
+                            src="https://www.tourmag.com/photo/art/grande/8334013-13054962.jpg?v=1444214835"
+                            alt="Canyons">
+                        <div class="card__content">
+                            <h1 class="card__header">Fullstack Developer</h1>
+                            <div class="card__text-wrapper">
+                                <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, is
+                                    truly
+                                    something much more than incredible.</p>
+                            </div>
+                            <button class="card__btn">Explore <span>&rarr;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="card"><img class="card__img"
+                            src="https://www.probatiment.com/wp-content/uploads/2022/01/mutuelle-pro-btp.jpg"
+                            alt="Canyons">
+                        <div class="card__content">
+                            <h1 class="card__header">Fullstack Developer</h1>
+                            <div class="card__text-wrapper">
+                                <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, is
+                                    truly
+                                    something much more than incredible.</p>
+                            </div>
+                            <button class="card__btn">Explore <span>&rarr;</span></button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+</div>
